<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--APP NAME-->
    <string name="app_name">Socio Infonavit</string>

    <!--DIALOG-->
    <string name="option_accept">Aceptar</string>
    <string name="option_cancel">Cancelar</string>
    <string name="title_error_logout">Usuario o contraseña incorrectos</string>
    <string name="message_error_logout">Ingrese nuevamente</string>
    <string name="confirm_dialog_logout">¿Esta seguro que desea cerrar sesión?</string>
    <string name="error_connection">Error de conexión</string>
    <string name="logout_success">Ha cerrado sesión correctamente.</string>

    <!--MAIN-->
    <string name="txt_welcome">Bienvenido</string>
    <string name="txt_my_benevits">Mis Benevits</string>
    <string name="txt_logout">Cerrar sesión</string>

    <!--LOGIN-->
    <string name="txt_user">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_forgot_my_password">Olvide mi contraseña</string>
    <string name="txt_send">Enviar</string>
    <string name="txt_do_not_have_account">No tengo cuenta.</string>
    <string name="txt_sig_in">Registrarme</string>
    <string name="txt_user_invalid">Ingrese un usuario valido.</string>
    <string name="txt_empty_password">Ingrese una contraseña.</string>

    <!--HOME-->
    <string name="txt_i_want">LO QUIERO</string>
    <string name="txt_place_holder_no_benefits">No se encontraron benevits.</string>
    <string name="txt_search_title">Buscar beneficios</string>

    <!--DRAWER-->
    <string name="drawer_opened" translatable="false">Opened</string>
    <string name="drawer_closed" translatable="false">Closed</string>

    <!--DESCRIPTIONS-->
    <string name="description_logo_splash">Logo Splash</string>
    <string name="description_logo_login">Logo login</string>
    <string name="description_place_holder">Place Holder</string>
    <string name="description_your_benevit">Your Benevit</string>
    <string name="description_shimmer">Shimmer</string>

    <!--MARKER PLURALS-->
    <plurals name="plural_expire_date">
        <item quantity="one">Vence en %d dia</item>
        <item quantity="other">Vence en %d dias</item>
    </plurals>


</resources>