<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sigin.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.nextia.socioinfonavit.ui.sigin.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgFamily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:src="@drawable/ic_family"
                        android:contentDescription="@string/description_logo_login"
                        app:layout_constraintBottom_toTopOf="@id/imgLogo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginBottom="35dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_logo"
                        android:contentDescription="@string/description_logo_splash"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgFamily" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edittext_default_margin_size"
                android:autofillHints="name"
                android:hint="@string/txt_email"
                android:text="@={viewModel.user}"
                android:inputType="textEmailAddress"
                android:textColor="@color/red"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvContainer" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edittext_default_margin_size"
                android:hint="@string/txt_password"
                android:text="@={viewModel.password}"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textColor="@color/red"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_default_margin_size"
                android:lineSpacingExtra="0dp"
                android:padding="0dp"
                android:text="@string/txt_forgot_my_password"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:background="@color/red"
                app:layout_constraintEnd_toEndOf="@id/tvForgotPassword"
                app:layout_constraintStart_toStartOf="@id/tvForgotPassword"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mBtnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_default_margin_size"
                android:text="@string/txt_send"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:enabled="false"
                app:backgroundTint="@drawable/btn_bg_color_selected"
                android:textColor="@drawable/btn_txt_color_selected"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />


            <TextView
                android:id="@+id/tvDoNotAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_default_margin_size"
                android:lineSpacingExtra="0dp"
                android:padding="0dp"
                android:text="@string/txt_do_not_have_account"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvSigIn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mBtnLogin"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/tvSigIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_default_margin_size"
                android:lineSpacingExtra="0dp"
                android:padding="0dp"
                android:text="@string/txt_sig_in"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDoNotAccount"
                app:layout_constraintTop_toBottomOf="@id/mBtnLogin"
                app:layout_constraintVertical_bias="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:background="@color/red"
                app:layout_constraintEnd_toEndOf="@id/tvSigIn"
                app:layout_constraintStart_toStartOf="@id/tvSigIn"
                app:layout_constraintTop_toBottomOf="@id/tvSigIn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
